--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@playwright/test": "^1.32.1",
     "@types/jquery": "^3.5.16",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "eslint-plugin-playwright": "^0.12.0"
+    "eslint-plugin-playwright": "^0.12.0",
+    "prettier": "^3.2.5"
   },
   "dependencies": {
     "csv-parse": "^5.3.6",
